Fix Add button z-index

--- a/src/elements/common-elements/engagement-overview-components/engagement-staff-members-tab/engagement-staff-members-tab.scss
+++ b/src/elements/common-elements/engagement-overview-components/engagement-staff-members-tab/engagement-staff-members-tab.scss
@@ -12,17 +12,6 @@
         }
     }
 
-
-    .add-button {
-        position: absolute;
-        right: 15px;
-        top: 4px;
-        width: 40px;
-        height: 40px;
-        color: rgba(255, 255, 255, 0.7);
-        z-index: 10;
-    }
-
     .search-input-container {
         position: absolute;
         right: 55px;
