--- a/src/elements/pages/micro-assessments-page-components/report-page-components/control-findings-tab/control-findings-tab.scss
+++ b/src/elements/pages/micro-assessments-page-components/report-page-components/control-findings-tab/control-findings-tab.scss
@@ -2,16 +2,6 @@
     position: relative;
     display: block;
 
-    .add-button {
-        position: absolute;
-        right: 15px;
-        top: 4px;
-        width: 40px;
-        height: 40px;
-        color: #ffffff;
-        z-index: 10;
-    }
-
     .repeatable-item-container.row-h  {
         width: 100%;
         min-width: 0 !important;
